--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 8081 # 端口号
   servlet:
-    context-path: / #项目名称
-
+    context-path: /  #项目名称
+#spring:
+#  mvc:
+#    view:
+#      prefix: /templates/
+#      suffix: .html
